--- a/05SpringCloud/02我的笔记/gulimail/基础3-商品服务-三级分类.md
+++ b/05SpringCloud/02我的笔记/gulimail/基础3-商品服务-三级分类.md
@@ -1855,8 +1855,9 @@ methods: {
 
 前后端交互流程：
 
-前端负责收集数据，组装好各种数据，但是真正的增删改查执行功能发送给后台，后台将前端收集来的数据转换成自己想要的数据后，再调用service来处理真正的功能。
+前端负责收集数据，组装好各种数据，但是真正的增删改查执行功能发送给后台，后台将前端收集来的数据转换成自己想要的数据后，再调用`service`来处理真正的功能。
 
-使用最多的是http的post请求，该请求将数据转化为json，后端使用@RequestBody注解来取出请求体的参数，将其再转化为指定的对象。
+使用最多的是`http`的`post`请求，该请求将数据转化为`json`，后端使用`@RequestBody`注解来取出请求体的参数，将其再转化为指定的对象。
 
 理想情况下，只需要编写后台的请求处理功能和与前端进行联调的接口。编写好接口后，需要有前端完善界面效果，然后将真正的请求给我们后台发送请求。
+
