阿里云报错

--- a/05SpringCloud/02我的笔记/gulimail/基础4-品牌管理.md
+++ b/05SpringCloud/02我的笔记/gulimail/基础4-品牌管理.md
@@ -590,14 +590,14 @@ nacos文件中创建命名空间，并添加oss.yml文件：
 spring:
   cloud:
     alicloud: # 配置OSS服务对应的accessKey，secretKey和endpoint
-      access-key: LTAI4GDvbHVqwE7yQvSZeHrq
-      secret-key: xc1HWA5f8nnlyqcfaW3jgmkbodOaHG
+      access-key: LTAI4xxxx
+      secret-key: xc1HWxxxx
       oss:
         endpoint: oss-cn-beijing.aliyuncs.com
         bucket: gulimall-xiaolun
 ```
 
-<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20210113151429691.png" alt="image-20210113151429691" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20210316134017948.png" alt="image-20210316134017948" style="zoom:50%;" />
 
 （2）application.yml文件
 
