--- a/05SpringCloud/02我的笔记/gulimail/基础4-品牌管理.md
+++ b/05SpringCloud/02我的笔记/gulimail/基础4-品牌管理.md
@@ -470,8 +470,8 @@ common模块中添加依赖：
 spring:
   cloud:
     alicloud: # 配置OSS服务对应的accessKey，secretKey和endpoint
-      access-key: LTAI4GDvbHVqwE7yQvSZeHrq
-      secret-key: xc1HWA5f8nnlyqcfaW3jgmkbodOaHG
+      access-key: LTAIxxx
+      secret-key: xc1Hxxx
       oss:
         endpoint: oss-cn-beijing.aliyuncs.com
 ```
