测试上传功能

--- a/05SpringCloud/02我的笔记/gulimail/基础4-品牌管理.md
+++ b/05SpringCloud/02我的笔记/gulimail/基础4-品牌管理.md
@@ -590,7 +590,7 @@ nacos文件中创建命名空间，并添加oss.yml文件：
 spring:
   cloud:
     alicloud: # 配置OSS服务对应的accessKey，secretKey和endpoint
-      access-key: LTAI4xxxx
+      access-key: LTAI4xxxxx
       secret-key: xc1HWxxxx
       oss:
         endpoint: oss-cn-beijing.aliyuncs.com
